# mingru-keras

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: python-publish.yml  python-test.yml  test.yml
mingru/: __init__.py  core.py
src/mingru_keras/: core.py
tests/: test_mingru.py  test_scan.py
