[tool.poetry]
name = "mingru"
version = "0.1.0"
description = "A minimal Python package with a minGRU method"
authors = ["Boris Reuderink <boris@cortext.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.6.0"

[tool.poetry.group.dev.dependencies]
jax = "^0.4.34"
pytest = "^8.3.3"
ipykernel = "^6.29.5"
ipython = "^8.28.0"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
